# csvMedianCalculator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
examples/: config.toml
examples/input/: btcusdtlevel2024.csv  btcusdttrade2024.csv
examples/output/: median_result.csv  medianresult.csv
include/: app_config.hpp  boost_median.hpp  config_parser.hpp  csv_reader.hpp  csv_record.hpp  csv_writer.hpp  file_discovery.hpp  median_calculator.hpp  metrics_accumulator.hpp  streaming_csv_writer.hpp  streaming_median.hpp  streaming_metrics_calculator.hpp  streaming_metrics_csv_writer.hpp
src/: boost_median.cpp  config_parser.cpp  csv_reader.cpp  csv_writer.cpp  file_discovery.cpp  main.cpp  median_calculator.cpp  metrics_accumulator.cpp  streaming_csv_writer.cpp  streaming_median.cpp  streaming_metrics_calculator.cpp  streaming_metrics_csv_writer.cpp
tests/: main_test.cpp
